--- a/homework/Day_003-2_HW.ipynb
+++ b/homework/Day_003-2_HW.ipynb
@@ -263,7 +263,7 @@
     "            img = Image.open(BytesIO(response.content))\n",
     "            img_list.append(img)\n",
     "    except:\n",
-    "        print(\"fuck\")\n",
+    "        print(\"except\")\n",
     "        \n",
     "    \n",
     "    return img_list"
